# farfield

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  RELEASE.md  TAURI_ARCHITECTURE.md  package.json
.github/workflows/: release-bundles.yml  strict.yml
apps/desktop/: package.json
apps/desktop/scripts/: check.mjs  prepare-server-bin.mjs  prepare-web-dist.mjs
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/server/: package.json
apps/server/src/: auth.ts  index.ts  perf-metrics.ts  thread-owner.ts
apps/server/src/agents/: types.ts
apps/server/src/unified/: adapter.ts
apps/server/test/: auth.test.ts  codex-agent-collaboration-mode.test.ts  codex-agent-error-classifier.test.ts  codex-agent-live-state.test.ts  codex-agent-thread-merge.test.ts  thread-owner.test.ts  unified-adapter.test.ts
apps/tauri/: .gitignore  package.json
apps/tauri/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: lib.rs  main.rs
apps/web/: package.json
apps/web-host/: package.json
apps/web-host/src/: index.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/components/: ChatTimeline.tsx  CommandBlock.tsx  ConversationItem.tsx  (+9 more)
apps/web/test/: api.test.ts  app.test.tsx  server-target.test.ts
scripts/: build-android-release.mjs  build-desktop-release.mjs  build-sidecar.mjs  bundle-linux-portable.mjs  dev.mjs  prepare-windows-bundled-codex.mjs  restart.mjs
(+5 files in other folders)
