[package]
name = "farfield_tauri"
version = "0.1.3"
edition = "2021"

[lib]
name = "farfield_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
if-addrs = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
url = "2"
uuid = { version = "1", features = ["v4"] }
